<resources>
    <string name="app_name">Krypto</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>

    <string name="high_score">HIGH_SCORE</string>
    <integer name="default_high_score">0</integer>

    <string name="freqcounter">Freqeuncy Counter</string>
    <string name="ioc">Index of Coincidence</string>
    <string name="period">Period</string>
    <string name="subcipher">Substitute Cipher</string>
    <string name="vcipher">Vigenere Cipher</string>
    <string name="transpo">Transposition Cipher</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- labels -->
    <string name="vig_output_label"><u>Vigenere Cipher Output</u></string>
    <string name="transpo_label"><u>Cipher / Message</u></string>
    <string name="output"><u>Output</u></string>

    <string name="viglvlciper">dcbqjbhivsuwcxkzcirswsgydwsrdzfjwqwosfoujdvojbzwdlmsvsfutcblisbopuzsfwmkwvdcshrsuhvsfhgaynfofymorhyxpfagzbhmymtssdzfobcoffhyliwgvwwszskbkscgnsuygexcl</string>
    <string name="transpolvlcipher">TKOOLHBXVAERJEZQOURYUWMTDINPHOCFSEG</string>
</resources>
