<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/fab_tool_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        fab:fab_addButtonColorNormal="@color/Black"
        fab:fab_addButtonColorPressed="@color/Black"
        fab:fab_addButtonPlusIconColor="@color/Dark_Green"
        fab:fab_addButtonSize="mini"
        fab:fab_labelStyle="@style/FABmenulabel"
        fab:fab_labelsPosition="left">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/freqFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_icon="@drawable/ic_freq_green"
            fab:fab_colorNormal="@color/dark_grey"
            fab:fab_title="@string/freqcounter"
            fab:fab_size="mini"
            fab:fab_colorPressed="@color/dark_grey"
            />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/iocFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_icon="@drawable/ic_ioc_green"
            fab:fab_colorNormal="@color/dark_grey"
            fab:fab_size="mini"
            fab:fab_title="@string/ioc"
            fab:fab_colorPressed="@color/dark_grey"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/periodFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_icon="@drawable/ic_period_green"
            fab:fab_colorNormal="@color/dark_grey"
            android:tint="@color/Dark_Green"
            fab:fab_size="mini"
            fab:fab_title="@string/period"
            fab:fab_colorPressed="@color/dark_grey"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/subFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_icon="@drawable/ic_sub_green"
            fab:fab_colorNormal="@color/dark_grey"
            fab:fab_size="mini"
            fab:fab_title="@string/subcipher"
            fab:fab_colorPressed="@color/dark_grey"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/vigFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_icon="@drawable/ic_vig_green"
            fab:fab_colorNormal="@color/dark_grey"
            fab:fab_size="mini"
            fab:fab_title="@string/vcipher"
            fab:fab_colorPressed="@color/dark_grey"/>
        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/transpoFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_icon="@drawable/ic_trans_green"
            fab:fab_colorNormal="@color/dark_grey"
            fab:fab_size="mini"
            fab:fab_title="@string/transpo"
            fab:fab_colorPressed="@color/dark_grey"/>
<com.getbase.floatingactionbutton.FloatingActionButton
    android:id="@+id/exitFAB"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    fab:fab_icon="@drawable/ic_close"
    fab:fab_colorNormal="@color/dark_grey"
    fab:fab_size="mini"
    fab:fab_title="Exit Game"
    fab:fab_colorPressed="@color/dark_grey"/>
    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</RelativeLayout>